--- a/Lab 3/Step2/docker-compose.yml
+++ b/Lab 3/Step2/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3.3'
 
 services:
    db:
-     image: mysql:1.0
+     image: sqlt:1.0
      volumes:
-       - db_data:/var/lib/mysql
+     - db_data:/var/lib/mysql
      restart: always
      environment:
-        MYSQL_ROOT_PASSWORD: somewordpress
-        MYSQL_DATABASE: wordpress
-        MYSQL_USER: wpuser
-        MYSQL_PASSWORD: abcd1234
+        MYSQL_ROOT_PASSWORD: root123
+        MYSQL_DB_NAME: wordpress
+        MYSQL_DB_USER: wpuser
+        MYSQL_DB_PASSWORD: cninnovation
 
    wordpress:
      depends_on:
@@ -22,7 +22,7 @@ services:
      environment:
         WORDPRESS_DB_NAME: wordpress
         WORDPRESS_DB_USER: wpuser
-        WORDPRESS_DB_PASSWORD: abcd1234
+        WORDPRESS_DB_PASSWORD: cninnovation
         WORDPRESS_DB_HOST: db:3306
 volumes:
     db_data: {}
