--- a/Lab 3/Step2/mysql/Dockerfile
+++ b/Lab 3/Step2/mysql/Dockerfile
@@ -1,20 +1,14 @@
 FROM debian:jessie
 
+COPY docker-entrypoint.sh docker-entrypoint.sh
+COPY init.sql init.sql
+
+RUN export DEBIAN_FRONTEND="noninteractive"
+
+RUN ["/bin/bash", "-c", "debconf-set-selections <<< 'mysql-server-5.5 mysql-server/root_password password $MYSQL_ROOT_PASSWORD'"]
+RUN ["/bin/bash", "-c", "debconf-set-selections <<< 'mysql-server-5.5 mysql-server/root_password_again password $MYSQL_ROOT_PASSWORD'"]
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install -y mysql-server
-RUN rm -rf /var/lib/apt/lists/*
-RUN sed -i 's/^\(bind-address\s.*\)/# \1/' /etc/mysql/my.cnf
-RUN sed -i 's/^\(log_error\s.*\)/# \1/' /etc/mysql/my.cnf
-RUN echo "mysqld_safe &" > /tmp/config
-RUN echo "mysqladmin --silent --wait=30 ping || exit 1" >> /tmp/config
-RUN echo "mysql -e 'GRANT ALL PRIVILEGES ON *.* TO \"root\"@\"%\" WITH GRANT OPTION;'" >> /tmp/config
-RUN bash /tmp/config
-RUN rm -f /tmp/config
+RUN apt-get install -y mysql-server
 
-VOLUME ["/etc/mysql", "/var/lib/mysql"]
-
-WORKDIR /data
-
-CMD ["mysqld_safe"]
-
+ENTRYPOINT ./docker-entrypoint.sh
 EXPOSE 3306
