--- a/Lab 3/Step2/docker-compose.yml
+++ b/Lab 3/Step2/docker-compose.yml
@@ -19,6 +19,13 @@ services:
      ports:
        - "8080:80"
      restart: always
+     volumes:
+      - type: volume
+        source: wpconfig
+        target: /etc/wordpress/
+      - type: volume
+        source: wpuploads
+        target: /var/www/html/wp-content/uploads/
      environment:
         WORDPRESS_DB_NAME: wordpress
         WORDPRESS_DB_USER: wpuser
@@ -26,3 +33,5 @@ services:
         WORDPRESS_DB_HOST: db:3306
 volumes:
     db_data: {}
+    wpconfig: {}
+    wpuploads: {}
